<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp">

    <TextView
        android:id="@+id/offer_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textColor="@color/sheen_green"
        android:textSize="23sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/offer_user_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="19sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/offer_username" />

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"
        android:indeterminateTint="@color/sheen_green"
        android:layout_marginTop="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/offer_image"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/offer_name_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/offer_user_email"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/offer_name_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:padding="5dp"
        android:text="@string/name_"
        android:textColor="@color/sheen_green"
        android:textSize="17sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/offer_image"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/offer_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="20dp"
        android:padding="5dp"
        android:textColor="@color/black"
        android:textSize="17sp"
        app:layout_constraintStart_toEndOf="@id/offer_name_title"
        app:layout_constraintTop_toBottomOf="@+id/offer_image" />

    <TextView
        android:id="@+id/offer_weight_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/weight_"
        android:textColor="@color/sheen_green"
        android:textSize="17sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/offer_name_title"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/offer_weight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:padding="5dp"
        android:textColor="@color/black"
        android:textSize="17sp"
        app:layout_constraintStart_toEndOf="@id/offer_weight_title"
        app:layout_constraintTop_toBottomOf="@+id/offer_name_title" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:text="@string/kilogram"
        android:textColor="@color/black"
        android:textSize="17sp"
        app:layout_constraintStart_toEndOf="@id/offer_weight"
        app:layout_constraintTop_toBottomOf="@+id/offer_name_title" />

    <TextView
        android:id="@+id/offer_price_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/price_"
        android:textColor="@color/sheen_green"
        android:textSize="17sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/offer_weight_title"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/offer_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:padding="5dp"
        android:textColor="@color/black"
        android:textSize="17sp"
        app:layout_constraintStart_toEndOf="@id/offer_price_title"
        app:layout_constraintTop_toBottomOf="@+id/offer_weight_title" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:text="@string/amd"
        android:textColor="@color/black"
        android:textSize="17sp"
        app:layout_constraintStart_toEndOf="@id/offer_price"
        app:layout_constraintTop_toBottomOf="@+id/offer_weight_title" />

    <TextView
        android:id="@+id/offer_util_when_unnecessary_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/util_when_unnecessary_"
        android:textColor="@color/sheen_green"
        android:textSize="17sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/offer_price_title"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/offer_util_when_unnecessary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:padding="5dp"
        android:textColor="@color/black"
        android:textSize="17sp"
        app:layout_constraintStart_toEndOf="@id/offer_util_when_unnecessary_title"
        app:layout_constraintTop_toBottomOf="@+id/offer_price_title" />

    <TextView
        android:id="@+id/offer_city_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/city_"
        android:textColor="@color/sheen_green"
        android:textSize="17sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/offer_util_when_unnecessary_title"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/offer_city"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:padding="5dp"
        android:textColor="@color/black"
        android:textSize="17sp"
        app:layout_constraintStart_toEndOf="@id/offer_city_title"
        app:layout_constraintTop_toBottomOf="@+id/offer_util_when_unnecessary_title" />

    <TextView
        android:id="@+id/offer_send_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:padding="5dp"
        android:textSize="17sp"
        app:layout_constraintBottom_toTopOf="@+id/offer_username"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>